# graphqula

./: .gitignore  CLAUDE.md  README.md  motivating_example.py  pyproject.toml  query_handler_poc.py
.github/workflows/: check-pr.yml
poc-old/: motivating_example.py  query_handler_poc.py
src/graphqula/: __init__.py  _ast_helpers.py  _document.py  _evaluation.py  ast_helpers.py  core.py  error_handler.py  exceptions.py  types.py
src/graphqula/_ast/: __init__.py  document.py
src/graphqula/_structure/: schema.py
src/graphqula/_structures/: __init__.py  document.py  schema.py
src/graphqula/bindings/: fastapi.py
src/purql/: __init__.py
src/purql/bindings/: __init__.py
tests/bindings/: test_fastapi.py
tests/core/: test_execute.py  test_schema_root_field_registration.py
tests/error_handler/: test_bind_to_request.py  test_bounded_error_tracker.py  test_error_tracker.py  test_fail_fast_handler.py  test_fast_fail_handler.py
tests/schema/: test_root_field_registration.py
