[tool.black]
line-length = 88
skip-magic-trailing-comma = true

[tool.poetry]
name = "graphqula"
version = "0.1.0"
description = "Server-side GraphQL, purely Pythonic."
authors = ["garyd <github@gazza.id.au>"]
license = "LGPL"

[tool.poetry.dependencies]
graphql-core = "^3.2"
# When you change this, also update:
#   - `tool.pyrefly.python-version` in this file
python = "^3.10"
pydantic = "^2"

[tool.poetry.group.dev-tools.dependencies]
black = "=26.5.1"
pyrefly = "^1"
ruff = "~0.15"

[tool.poetry.group.bindings.dependencies]
fastapi = "~0.138"

[tool.poetry.group.test.dependencies]
pytest = "^9"
pytest-asyncio = "^1.4"

[tool.pyrefly]
# Strict everywhere by default.
preset = "strict"
project-includes = [
    "src/**/*.py*",
    "tests/**/*.py*",
]

# Keep this in sync with `tool.poetry.dependencies.python`.
python-version = "3.10"

[[tool.pyrefly.sub-config]]
# Internal modules (NB: not `__init__.py`!) are not intended to be accessed by library
# users, so it does not need to be well typed. It is up to the code author to add
# enough type hints for their purposes, but often we can just rely on type inference.
matches = "src/graphqula/**/_[!_]*.py*"

[tool.pyrefly.sub-config.errors]
# NB: The error configuration for `tests` here is merged onto the root config

# We don't enforce typing, so implicit Any's are acceptable.
implicit-any-parameter = "ignore"

[[tool.pyrefly.sub-config]]
# Test code has an even more relaxed expectation for type checking - most of the time
# it adds noise and hassle without improving quality or readability.
matches = "tests/**"

[tool.pyrefly.sub-config.errors]
# NB: The error configuration for `tests` here is merged onto the root config

implicit-any-parameter = "ignore"
missing-override-decorator = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
extend-exclude = ["poc-old"]

[build-system]
requires = ["poetry-core>=2.4.0"]
build-backend = "poetry.core.masonry.api"
