[tool.poetry]
name = "graphqula"
version = "0.1.0"
description = "Server-side GraphQL, purely Pythonic."
authors = ["garyd <github@gazza.id.au>"]
license = "LGPL"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2"

[tool.poetry.group.dev-tools.dependencies]
black = "=26.5.1"
ruff = "^0.15"

[tool.poetry.group.bindings.dependencies]
fastapi = "^0.115"

[tool.poetry.group.test.dependencies]
pytest = ">=8,<10"
pytest-asyncio = "^1.4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
extend-exclude = ["poc-old"]

[build-system]
requires = ["poetry-core>=2.4.0"]
build-backend = "poetry.core.masonry.api"
