[tool.black]
line-length = 88
skip-magic-trailing-comma = true

[tool.poetry]
name = "graphqula"
version = "0.1.0"
description = "Server-side GraphQL, purely Pythonic."
authors = ["garyd <github@gazza.id.au>"]
license = "LGPL-3.0-only"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
packages = [
    { include="graphqula", from="src" },
]

[tool.poetry.dependencies]
graphql-core = "^3.2"
# When you change this, also update:
#   - `tool.pyrefly.python-version` in this file
#   - `setup-python` steps in GitHub actions workflows
python = "^3.10"
pydantic = "^2"

[tool.poetry.group.dev-tools.dependencies]
black = "=26.5.1"
pyrefly = "^1"
ruff = "~0.15"

[tool.poetry.group.bindings.dependencies]
fastapi = "~0.138"

[tool.poetry.group.test.dependencies]
pytest = "^9"
pytest-asyncio = "^1.4"

[tool.pyrefly]
# Strict everywhere by default.
preset = "strict"
project-includes = [
    "src/**/*.py*",
    "tests/**/*.py*",
]

# Keep this in sync with `tool.poetry.dependencies.python`.
python-version = "3.10"

replace-imports-with-any = [
    # graphql-core's GraphQLNamedType.__new__ is annotated to return the base type, so
    # every named-type value (constructors *and* module constants like GraphQLString)
    # is inferred as GraphQLNamedType instead of its real subtype. So we have to treat
    # the whole package as untyped.
    "graphql",
    "graphql.*",
]

[[tool.pyrefly.sub-config]]
# Internal modules and packages (single leading underscore, so not `__init__.py`) are
# not intended to be accessed by library users, so they don't need to be well typed.
# It is up to the code author to add enough type hints for their purposes, but often
# we can just rely on type inference.
matches = "src/graphqula/**/_[!_]*"

[tool.pyrefly.sub-config.errors]
# NB: The error configuration for `tests` here is merged onto the root config

# We don't enforce typing, so implicit Any's are acceptable.
implicit-any-parameter = "ignore"

[[tool.pyrefly.sub-config]]
# Test code has an even more relaxed expectation for type checking - most of the time
# it adds noise and hassle without improving quality or readability.
matches = "tests/**"

[tool.pyrefly.sub-config.errors]
# NB: The error configuration for `tests` here is merged onto the root config

implicit-any-parameter = "ignore"
missing-override-decorator = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
extend-exclude = ["poc-old"]

[build-system]
requires = ["poetry-core>=2.4.0"]
build-backend = "poetry.core.masonry.api"
